--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,18 @@ body {
     @apply relative h-screen;
 }
 
+*::-webkit-scrollbar {
+    @apply w-[10px];
+}
+
+*::-webkit-scrollbar-track {
+    @apply rounded-md bg-mine-shaft;
+}
+
+*::-webkit-scrollbar-thumb {
+    @apply rounded-md bg-gradient-to-b from-shakespeare to-dull-lavender;
+}
+
 .splide__arrow {
     @apply flex aspect-square w-12 items-center justify-center bg-transparent;
 }
